[package]
name = "mc-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
tokio-util = "0.6.7"
trust-dns-resolver = { version = "0.20.3" }
anyhow = "1.0"
thiserror = "1.0"