[package]
name = "mc-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10", features = ["full"] }
tokio-util = "0.6"
trust-dns-resolver = { version = "0.20" }
anyhow = "1.0"
thiserror = "1.0"
async-compression = { version = "0.3", features = ["tokio", "zlib"] }
cfb8 = "0.7"
aes = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.10"
serde_json = "1.0"
base64 = "0.13"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
sha-1 = "0.9"
rand = "0.8"
rsa = "0.5"