[package]
name = "mc-proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.18", features = ["full"] }
tokio-util = "0.6"
trust-dns-resolver = { version = "0.20" }
anyhow = "1.0"
thiserror = "1.0"
async-compression = { version = "0.3", features = ["tokio", "zlib"] }
cfb8 = "0.7"
aes = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.10"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha-1 = "0.9"
rand = "0.8"
rsa = "0.6"
futures = { version = "0.3", features = ["std"] }
bimap = "0.6"
unicase = "2.6"